--- a/app/index.css
+++ b/app/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
-
+/* // Calendar core CSS */
+import '@fullcalendar/core/main.css';
+import '@fullcalendar/daygrid/main.css';
+import '@fullcalendar/timegrid/main.css';
 @theme {
   /* Font Families */
   --font-display: "Poppins", sans-serif;
@@ -238,11 +240,14 @@ body {
   top: 0;
   left: 0; */
   width: 100%;
-  height: 300px; /* Adjust based on your Hero height */
+  height: 300px;
+  /* Adjust based on your Hero height */
   background: linear-gradient(to bottom, #f8e2b6, #ffffff);
-  background-image: url('/bg/appbackground@2x.png'); /* optional */
+  background-image: url('/bg/appbackground@2x.png');
+  /* optional */
   background-repeat: no-repeat;
-  background-size: calc(100% + 20px) calc(100% + 20px); /* Ensures the image covers the container */
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  /* Ensures the image covers the container */
   /* z-index: 49999999; */
   overflow: hidden;
 }
